# Hospital-management-system

./: .gitignore  README.md  SESSION_REPORT.md  app.py  config.py  db_init.py  index.py  models.py  package.json  pyproject.toml  render.yaml  requirements.txt  sqlite_init.py  vercel.json
app/: __init__.py
app/routes/: api.py  auth.py  doctor.py  main.py  patient.py
app/services/: db_service.py
static/: app.js  style.css
templates/: admin.html  appointments.html  base.html  book.html  doctor_dashboard.html  index.html  login.html  patient_dashboard.html  signup_doctor.html  signup_patient.html  telehealth.html
tools/: health_check.py  test_signup.py
