[project]
name = "hospital-management-system"
version = "0.1.0"
description = "Hospital Management System"
dependencies = [
    "Flask>=2.2",
    "Flask-SQLAlchemy>=3.0",
    "Flask-PyMongo>=2.3",
    "python-dotenv>=1.0",
    "certifi>=2023.7.22",
    "gunicorn>=20.1.0",
    "Flask-Cors>=4.0.0",
    "dnspython>=2.3.0",
]

[tool.setuptools]
py-modules = ["app", "config", "models", "db_init", "sqlite_init"]
